--- a/packages/stream_chat_flutter/pubspec.yaml
+++ b/packages/stream_chat_flutter/pubspec.yaml
@@ -41,7 +41,7 @@ dependencies:
   flutter_slidable: ^0.5.7
   clipboard: ^0.1.2+8
   image_gallery_saver: ^1.6.7
-  esys_flutter_share: ^1.0.2
+  share_plus: ^1.2.0
   photo_manager: ^0.6.0
   transparent_image: ^1.0.0
   ezanimation: ^0.4.1
