--- a/.github/workflows/stream_flutter_workflow.yml
+++ b/.github/workflows/stream_flutter_workflow.yml
@@ -48,25 +48,12 @@ jobs:
       - name: 'Install Tools'
         run: |
           ./.github/workflows/scripts/install-tools.sh
-          curl -sL https://github.com/google/google-java-format/releases/download/google-java-format-1.3/google-java-format-1.3-all-deps.jar -o $HOME/google-java-format.jar
       - name: 'Bootstrap Workspace'
         run: melos bootstrap
       - name: 'Dart'
         run: |
           melos exec -c 1 -- \
             flutter format .
-          ./.github/workflows/scripts/validate-formatting.sh
-      - name: 'Objective-C'
-        if: ${{ success() || failure() }}
-        run: |
-          melos exec -c 4 --ignore="*platform_interface*" --ignore="*web*" -- \
-            find . -maxdepth 3 -name "*.h" -o -name "*.m" -print0 \| xargs -0 clang-format -i --style=Google --verbose
-          ./.github/workflows/scripts/validate-formatting.sh
-      - name: 'Java'
-        if: ${{ success() || failure() }}
-        run: |
-          melos exec -c 4 --ignore="*platform_interface*" --ignore="*web*" -- \
-            find . -maxdepth 12 -name "*.java" -print0 \| xargs -0 java -jar $HOME/google-java-format.jar --replace
           ./.github/workflows/scripts/validate-formatting.sh
 
   test_dart:
@@ -79,12 +66,21 @@ jobs:
       - name: 'Install Flutter'
         run: ./.github/workflows/scripts/install-flutter.sh stable
       - name: 'Install Tools'
-        run: ./.github/workflows/scripts/install-tools.sh
+        run: |
+          ./.github/workflows/scripts/install-tools.sh
+          flutter pub global activate coverage
       - name: 'Bootstrap Workspace'
         run: melos bootstrap
       - name: 'Flutter Test'
-        run: cd packages/stream_chat && flutter pub run test
-
+        run: |
+          cd packages/stream_chat
+          flutter pub run test --coverage coverage/
+          format_coverage --lcov --in=coverage/ --out=lcov.info --packages=.packages --report-on=lib
+      - uses: VeryGoodOpenSource/very_good_coverage@v1.1.1
+        with:
+          path: "packages/stream_chat/lcov.info"
+          min_coverage: 50
+          exclude: "**/*.g.dart **/*.freezed.dart"
   test_flutter:
     runs-on: ubuntu-latest
     timeout-minutes: 15
