--- a/.github/workflows/stream_flutter_workflow.yml
+++ b/.github/workflows/stream_flutter_workflow.yml
@@ -102,3 +102,7 @@ jobs:
             flutter test --coverage
       - name: CodeCov
         run: bash <(curl -s https://codecov.io/bash) -t ${{ secrets.CODECOV_TOKEN }} -f packages/stream_chat_persistence/coverage/lcov.info -F stream_chat_persistence
+      - uses: VeryGoodOpenSource/very_good_coverage@v1.1.1
+        with:
+          path: packages/stream_chat_persistence/lcov.info
+          min_coverage: 0.3
