add coverage for ui packages

--- a/.github/workflows/stream_flutter_workflow.yml
+++ b/.github/workflows/stream_flutter_workflow.yml
@@ -101,8 +101,19 @@ jobs:
           melos exec -c 3 --flutter --dir-exists=test --ignore="*example*" --ignore="*web*" -- \
             flutter test --coverage
       - name: CodeCov
-        run: bash <(curl -s https://codecov.io/bash) -t ${{ secrets.CODECOV_TOKEN }} -f packages/stream_chat_persistence/coverage/lcov.info -F stream_chat_persistence
+        run: |
+          bash <(curl -s https://codecov.io/bash) -t ${{ secrets.CODECOV_TOKEN }} -f packages/stream_chat_persistence/coverage/lcov.info -F stream_chat_persistence
+          bash <(curl -s https://codecov.io/bash) -t ${{ secrets.CODECOV_TOKEN }} -f packages/stream_chat_flutter_core/coverage/lcov.info -F stream_chat_flutter_core
+          bash <(curl -s https://codecov.io/bash) -t ${{ secrets.CODECOV_TOKEN }} -f packages/stream_chat_flutter/coverage/lcov.info -F stream_chat_flutter
       - uses: VeryGoodOpenSource/very_good_coverage@v1.1.1
-        with:
-          path: packages/stream_chat_persistence/coverage/lcov.info
-          min_coverage: 0.2
+          with:
+            path: packages/stream_chat_persistence/coverage/lcov.info
+            min_coverage: 0.2
+      - uses: VeryGoodOpenSource/very_good_coverage@v1.1.1
+          with:
+            path: packages/stream_chat_flutter_core/coverage/lcov.info
+            min_coverage: 4.5
+      - uses: VeryGoodOpenSource/very_good_coverage@v1.1.1
+          with:
+            path: packages/stream_chat_flutter/coverage/lcov.info
+            min_coverage: 17
