--- a/packages/stream_chat/pubspec.yaml
+++ b/packages/stream_chat/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   rxdart: ^0.25.0
   uuid: ^2.2.2
   web_socket_channel: ^1.2.0
+  equatable: ^2.0.0
 
 dev_dependencies:
   build_runner: ^1.10.0
