--- a/packages/stream_chat/pubspec.yaml
+++ b/packages/stream_chat/pubspec.yaml
@@ -9,25 +9,25 @@ environment:
   sdk: '>=2.12.0 <3.0.0'
 
 dependencies:
-  async: ^2.5.0
+  async: ^2.8.1
   collection: ^1.15.0
   dio: ^4.0.0
-  equatable: ^2.0.0
-  freezed_annotation: ^0.14.0
+  equatable: ^2.0.3
+  freezed_annotation: ^0.14.3
   http_parser: ^4.0.0
   jose: ^0.3.2
-  json_annotation: ^4.0.1
+  json_annotation: ^4.1.0
   logging: ^1.0.1
-  meta: ^1.3.0
+  meta: ^1.7.0
   mime: ^1.0.0
   rate_limiter: ^0.1.1
-  rxdart: ^0.27.0
+  rxdart: ^0.27.1
   uuid: ^3.0.4
-  web_socket_channel: ^2.0.0
+  web_socket_channel: ^2.1.0
 
 dev_dependencies:
-  build_runner: ^2.0.1
-  freezed: ^0.14.1+3
-  json_serializable: ^4.1.0
-  mocktail: ^0.1.1
+  build_runner: ^2.1.1
+  freezed: ^0.14.5
+  json_serializable: ^5.0.0
+  mocktail: ^0.1.4
   test: ^1.17.7
