--- a/packages/stream_chat_flutter/pubspec.yaml
+++ b/packages/stream_chat_flutter/pubspec.yaml
@@ -10,40 +10,40 @@ environment:
   flutter: ">=1.17.0"
 
 dependencies:
-  cached_network_image: ^3.0.0
+  cached_network_image: ^3.1.0
   characters: ^1.1.0
-  chewie: ^1.2.0
+  chewie: ^1.2.2
   collection: ^1.15.0
   dio: ^4.0.0
   ezanimation: ^0.5.0
-  file_picker: ^3.0.1
+  file_picker: ^4.0.0
   flutter:
     sdk: flutter
-  flutter_keyboard_visibility: ^5.0.1
-  flutter_markdown: ^0.6.1
+  flutter_keyboard_visibility: ^5.0.3
+  flutter_markdown: ^0.6.5
   flutter_portal: ^0.4.0
   flutter_slidable: ^0.6.0
   flutter_svg: ^0.22.0
   http_parser: ^4.0.0
   image_gallery_saver: ^1.6.9
-  image_picker: ^0.8.2
+  image_picker: ^0.8.3+3
   jiffy: ^4.1.0
-  lottie: ^1.0.1
-  meta: ^1.3.0
-  path_provider: ^2.0.1
-  photo_manager: ^1.2.6+1
+  lottie: ^1.1.0
+  meta: ^1.7.0
+  path_provider: ^2.0.2
+  photo_manager: ^1.3.1
   photo_view: ^0.12.0
-  rxdart: ^0.27.0
+  rxdart: ^0.27.1
   scrollable_positioned_list: ^0.2.0-nullsafety.0
-  share_plus: ^2.0.3
+  share_plus: ^2.1.4
   shimmer: ^2.0.0
   stream_chat_flutter_core: ^2.2.0
-  substring_highlight: ^1.0.26
+  substring_highlight: ^1.0.33
   synchronized: ^3.0.0
   url_launcher: ^6.0.3
-  video_compress: ^3.0.0
-  video_player: ^2.1.0
-  video_thumbnail: ^0.3.3
+  video_compress: ^3.1.0
+  video_player: ^2.1.14
+  video_thumbnail: ^0.4.3
   visibility_detector: ^0.2.0
 
 flutter:
@@ -57,8 +57,6 @@ flutter:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  golden_toolkit: ^0.9.0
-  mocktail: ^0.1.2
+  golden_toolkit: ^0.10.0
+  mocktail: ^0.1.4
   path: ^1.8.0
-  pedantic: ^1.11.0
-
