--- a/packages/stream_chat_flutter/pubspec.yaml
+++ b/packages/stream_chat_flutter/pubspec.yaml
@@ -12,7 +12,9 @@ environment:
 dependencies:
   cached_network_image: ^3.0.0
   characters: ^1.1.0
-  chewie: ^1.2.0
+  chewie:
+    git:
+      url: https://github.com/brianegan/chewie
   collection: ^1.15.0
   diacritic: ^0.1.3
   dio: ^4.0.0
