--- a/packages/stream_chat_flutter/pubspec.yaml
+++ b/packages/stream_chat_flutter/pubspec.yaml
@@ -18,6 +18,8 @@ dependencies:
   dio: ^4.0.0
   ezanimation: ^0.6.0
   file_picker: ^4.1.3
+  file_selector: ^0.8.3
+  file_selector_macos: ^0.0.4+1
   flutter:
     sdk: flutter
   flutter_markdown: ^0.6.1
@@ -30,6 +32,7 @@ dependencies:
   jiffy: ^5.0.0
   lottie: ^1.0.1
   meta: ^1.3.0
+  native_context_menu: ^0.2.0+3
   path_provider: ^2.0.1
   photo_manager: ^1.2.6+1
   photo_view: ^0.13.0
