--- a/packages/stream_chat_flutter/pubspec.yaml
+++ b/packages/stream_chat_flutter/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   file_picker: ^4.1.3
   file_selector: ^0.8.3
   file_selector_macos: ^0.0.4+1
+  fluent_ui: ^3.9.0
   flutter:
     sdk: flutter
   flutter_markdown: ^0.6.1
@@ -31,6 +32,7 @@ dependencies:
   image_picker: ^0.8.2
   jiffy: ^5.0.0
   lottie: ^1.0.1
+  macos_ui: ^0.10.0+1
   meta: ^1.3.0
   native_context_menu: ^0.2.0+3
   path_provider: ^2.0.1
