feat(flutter): add YaruDialog with docs
Also add top level docs for PlatformDialog

--- a/packages/stream_chat_flutter/pubspec.yaml
+++ b/packages/stream_chat_flutter/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   video_player: ^2.1.0
   video_thumbnail: ^0.4.3
   visibility_detector: ^0.2.0
+  yaru_widgets: ^1.0.6
 
 flutter:
   assets:
