--- a/packages/stream_chat_flutter/pubspec.yaml
+++ b/packages/stream_chat_flutter/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   ezanimation: ^0.6.0
   file_picker: ^4.1.3
   file_selector: ^0.8.3
+  file_selector_linux: ^0.0.2+1
   file_selector_macos: ^0.0.4+1
   flutter:
     sdk: flutter
