--- a/packages/stream_chat_flutter/pubspec.yaml
+++ b/packages/stream_chat_flutter/pubspec.yaml
@@ -15,15 +15,15 @@ dependencies:
   chewie: ^1.3.0
   collection: ^1.15.0
   dart_vlc: ^0.1.8
-  desktop_drop: ^0.3.2
+  desktop_drop: ^0.3.3
   diacritic: ^0.1.3
   dio: ^4.0.0
   ezanimation: ^0.6.0
   file_picker: ^4.1.3
-  file_selector: ^0.8.3
+  file_selector: ^0.8.4
   file_selector_linux: ^0.0.2+1
-  file_selector_macos: ^0.0.4+1
-  fluent_ui: ^3.9.0
+  file_selector_macos: ^0.8.2
+  fluent_ui: ^3.9.1
   flutter:
     sdk: flutter
   flutter_markdown: ^0.6.1
@@ -35,9 +35,9 @@ dependencies:
   image_picker: ^0.8.2
   jiffy: ^5.0.0
   lottie: ^1.0.1
-  macos_ui: ^0.10.0+1
+  macos_ui: ^0.12.0+1
   meta: ^1.3.0
-  native_context_menu: ^0.2.0+3
+  native_context_menu: ^0.2.1+4
   path_provider: ^2.0.1
   photo_manager: ^1.2.6+1
   photo_view: ^0.13.0
