--- a/packages/stream_chat_flutter/pubspec.yaml
+++ b/packages/stream_chat_flutter/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   characters: ^1.1.0
   chewie: ^1.3.0
   collection: ^1.15.0
+  contextmenu: ^3.0.0
   dart_vlc: ^0.1.8
   desktop_drop: ^0.3.3
   diacritic: ^0.1.3
@@ -37,7 +38,6 @@ dependencies:
   lottie: ^1.0.1
   macos_ui: ^0.12.0+1
   meta: ^1.3.0
-  native_context_menu: ^0.2.1+4
   path_provider: ^2.0.9
   photo_manager: ^1.2.6+1
   photo_view: ^0.13.0
